# rs-chinese-chess

./: .gitignore  Cargo.toml  readme.md  rustfmt.toml
.github/workflows/: ci.yml
crates/engine/: Cargo.toml
crates/engine/src/: board.rs  engine.rs  lib.rs  zobrist.rs
examples/: hello.rs
lib/common/: Cargo.toml
lib/common/src/: lib.rs
lib/engine/: Cargo.toml
lib/engine/src/: board.rs  constant.rs  engine.rs  lib.rs  search.rs  zobrist.rs
src/: game.rs  main.rs  ui.rs
src/ui/: anim.rs  game.rs  mod.rs  render.rs
