[package]
edition = "2021"
name = "ui"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.1"
fltk = {version = "1.4.32", features = ["fltk-bundled"]}
engine = { path = "./lib/engine" }


[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

[workspace]
members = ["lib/*"]
