[package]
edition = "2024"
name = "ui"
version = "0.1.0"

[dependencies]
anyhow = "1.0.94"
bytes = "1.9.0"
fltk = {version = "1.5.1", features = ["fltk-bundled"]}
engine = { path = "./lib/engine" }


[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

[workspace]
members = ["lib/*"]
